--- a/labs/02-vectorization.ipynb
+++ b/labs/02-vectorization.ipynb
@@ -6,7 +6,7 @@
         "id": "IPir_6bCCFnZ"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/rhodes-byu/cs180-winter25/blob/main/labs/02-vectorization.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a><p><b>After clicking the \"Open in Colab\" link, copy the notebook to your own Google Drive before getting started, or it will not save your work</b></p>"
+        "<a href=\"https://colab.research.google.com/github/wingated/cs180/blob/main/data_science_labs/data_science_lab_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a><p><b>After clicking the \"Open in Colab\" link, copy the notebook to your own Google Drive before getting started, or it will not save your work</b></p>"
       ]
     },
     {
@@ -17,15 +17,6 @@
       "source": [
         "# BYU CS 180 Lab 2: Vectorization"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "KHJ0Y_KwLNWf"
-      },
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "markdown",
@@ -44,13 +35,6 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## **Note**: As the exercises in this lab are to familiarize yourself with NumPy constructs for vectorization, the use of ***generative AI*** for this lab is not allowed. You must build all of the requested functions from scratch."
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {
         "id": "HH-Qsb6xHNoO"
       },
@@ -61,7 +45,7 @@
         "rainfall = [[ 0.31402549, 0.32153717, 0.32741198],\n",
         "           [0.81886707,  0.37115345,  0.15777402]]\n",
         "```\n",
-        "Then averaging over the columns would give an average for each row, or the average rain fall for each city.\n",
+        "Then summing over the columns would give an average for each row, or the average rain fall for each city.\n",
         "```\n",
         "0.32099155\n",
         "0.44926485\n",
@@ -104,9 +88,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "id": "PxLCrCmQLG2t"
+        "id": "JVeiNDB6S0w1"
       },
       "outputs": [],
       "source": [
@@ -116,9 +100,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
-        "id": "Ja3KidrmLG2t"
+        "id": "2WWDcag6S0w1"
       },
       "outputs": [],
       "source": [
@@ -128,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "LaA7yshUII3a"
       },
@@ -162,21 +146,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
-        "id": "FrvvgNsQLG2u"
+        "id": "rvSZb1lrS0w2"
       },
       "outputs": [],
       "source": [
         "# Means without vectorization\n",
         "def means_without_vectorization(input_array: List[List]) -> List:\n",
-        "    # your code goes here (remove pass)\n",
-        "    pass"
+        "  output = []\n",
+        "  for rows in input_array:\n",
+        "    output.append(np.round(sum(rows) / len(rows),decimals=7))\n",
+        "  return output"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "tkp86oHfIm8z"
       },
@@ -184,17 +170,32 @@
       "source": [
         "# Means with vectorization\n",
         "def means_with_vectorization(input_array: List[List]) -> np.ndarray:\n",
-        "    # your code goes here (remove pass)\n",
-        "    pass"
+        "    input_array_np = np.array(input_array)\n",
+        "    row_means = np.mean(input_array_np, axis=1)\n",
+        "    return row_means"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
-        "id": "JI83Yh-WJm-J"
+        "id": "JI83Yh-WJm-J",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "76e6c855-6282-4d7f-8785-9eb353ee5cc4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 1.1045833   0.23070079  0.49267583 -1.47843405 -0.378716    0.37977391\n",
+            " -0.25526607  0.6078618   0.67650773 -0.24496083]\n",
+            "[1.1045833, 0.2307008, 0.4926758, -1.4784341, -0.378716, 0.3797739, -0.2552661, 0.6078618, 0.6765077, -0.2449608]\n"
+          ]
+        }
+      ],
       "source": [
         "# These should match the example output above\n",
         "print(means_with_vectorization(X))\n",
@@ -276,7 +277,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "HvXqUTRMJySC"
       },
@@ -319,37 +320,62 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "70cE89w6KjEQ"
       },
       "outputs": [],
       "source": [
         "def element_wise_addition_without_vectorization(A: List[List], B:  List[List]) -> List[List]:\n",
-        "    # your code goes here (remove pass)\n",
-        "    pass"
+        "  result = [row[:] for row in A]\n",
+        "  for i in range(len(A)):\n",
+        "      for j in range(len(A[0])):\n",
+        "          result[i][j] += B[i][j]\n",
+        "  return result"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "trNC-xEsKtT4"
       },
       "outputs": [],
       "source": [
         "def element_wise_addition_with_vectorization(A: List[List], B:  List[List]) -> np.ndarray:\n",
-        "    # your code goes here (remove pass)\n",
-        "    pass"
+        "\n",
+        "    return np.array(B) + np.array(A)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
-        "id": "e83vUc3UKvBR"
+        "id": "e83vUc3UKvBR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "adaa2ae6-49da-4a31-8159-12f138107c38"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[-0.08841683, -0.5672346099999999, -0.8566600200000001], [-1.39971672, -0.75717701, 1.35374404], [-1.0074342299999999, 2.07863666, 2.30965784], [1.99658311, -2.5259522499999996, -3.09109538], [-0.35756098999999997, 0.72170032, 1.0506518599999999], [-0.81299371, -0.98120049, 1.77446331], [-1.3017188800000001, 0.1353280899999998, -0.35890811], [-1.34172627, -1.11385729, -2.28282926], [-1.76716835, 1.18580288, -0.50288313], [0.31166245000000004, -0.09367424000000013, -0.17716837000000002]]\n",
+            "[[-0.08841683 -0.56723461 -0.85666002]\n",
+            " [-1.39971672 -0.75717701  1.35374404]\n",
+            " [-1.00743423  2.07863666  2.30965784]\n",
+            " [ 1.99658311 -2.52595225 -3.09109538]\n",
+            " [-0.35756099  0.72170032  1.05065186]\n",
+            " [-0.81299371 -0.98120049  1.77446331]\n",
+            " [-1.30171888  0.13532809 -0.35890811]\n",
+            " [-1.34172627 -1.11385729 -2.28282926]\n",
+            " [-1.76716835  1.18580288 -0.50288313]\n",
+            " [ 0.31166245 -0.09367424 -0.17716837]]\n"
+          ]
+        }
+      ],
       "source": [
         "# These should match the example output above\n",
         "print(element_wise_addition_without_vectorization(A,B))\n",
@@ -406,7 +432,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "gYunukDxMUBF"
       },
@@ -420,37 +446,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "eBkA26z1MjKh"
       },
       "outputs": [],
       "source": [
         "def dot_product_without_vectorization(a: List, b: List) -> int:\n",
-        "    # your code goes here (remove pass)\n",
-        "    pass"
+        "  result = 0\n",
+        "  for i in range(len(a)):\n",
+        "      result += a[i] * b[i]\n",
+        "  return result"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "HZwFHctQMpkz"
       },
       "outputs": [],
       "source": [
         "def dot_product_with_vectorization(a: List, b: List)-> int:\n",
-        "    # your code goes here (remove pass)\n",
-        "    pass"
+        "    return np.dot(np.array(a), np.array(b))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
-        "id": "XYZVccj6MuC2"
+        "id": "XYZVccj6MuC2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "733ebaec-2f2e-498e-d282-c073a53cb6a0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "420\n",
+            "420\n"
+          ]
+        }
+      ],
       "source": [
         "# These should match the example output above\n",
         "print(dot_product_without_vectorization(a,b))\n",
@@ -494,7 +534,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "8PN3o3xZPACc"
       },
@@ -511,37 +551,65 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "LxCvJ3lPP1dr"
       },
       "outputs": [],
       "source": [
         "def matrix_multiplication_without_vectorization(A: List[List], B: List[List]) -> List[List]:\n",
-        "    # your code goes here (remove pass)\n",
-        "    pass"
+        "  rows_A, cols_A = len(A), len(A[0])\n",
+        "  rows_B, cols_B = len(B), len(B[0])\n",
+        "\n",
+        "  # Initialize result matrix with zeros\n",
+        "  result = [[0 for _ in range(cols_B)] for _ in range(rows_A)]\n",
+        "\n",
+        "  # Perform matrix multiplication\n",
+        "  for i in range(rows_A):\n",
+        "      for j in range(cols_B):\n",
+        "          for k in range(cols_A):  # or range(rows_B)\n",
+        "              result[i][j] += A[i][k] * B[k][j]\n",
+        "\n",
+        "  return result"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "qzhI57JeP2_G"
       },
       "outputs": [],
       "source": [
         "def matrix_multiplication_with_vectorization(A: List[List], B: List[List]) -> np.ndarray:\n",
-        "    # your code goes here (remove pass)\n",
-        "    pass"
+        "    A_np = np.array(A)\n",
+        "    B_np = np.array(B)\n",
+        "\n",
+        "    # Perform matrix multiplication using the @ operator\n",
+        "    return A_np @ B_np"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
-        "id": "AuNxxa7rP3rH"
+        "id": "AuNxxa7rP3rH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3b146baf-f979-4d1a-a8fa-4ad32f436faf"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[5], [7]]\n",
+            "[[5]\n",
+            " [7]]\n"
+          ]
+        }
+      ],
       "source": [
         "# These should match the example output above\n",
         "print(matrix_multiplication_without_vectorization(A,B))\n",
@@ -560,24 +628,45 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "UDxHODpaLG2v"
-      },
       "source": [
-        "## Exercise 5: Time Comparison\n",
+        "Exercise 5: Time Comparison\n",
         "\n",
-        "The benefit of vectorization is to save on computation time and memory consumption. You will be comparing the run time of each of the functions you defined to check the speedup.  "
-      ]
+        "The benefit of vectorization is to save on computation time and memory consumption. You will be comparing the run time of each of the functions you defined to check the speedup.\n"
+      ],
+      "metadata": {
+        "id": "_CuGmkpJnXph"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
-        "vscode": {
-          "languageId": "julia"
-        }
+        "id": "Tr6fF5xbS0w-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6f1326c2-882e-46e9-9422-7018b78c8def"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Means - Non-vectorized time: 0.0883 seconds\n",
+            "Means - Vectorized time: 0.0058 seconds\n",
+            "Means - Speedup: 15.16x\n",
+            "Element-wise Addition - Non-vectorized time: 0.4179 seconds\n",
+            "Element-wise Addition - Vectorized time: 0.0098 seconds\n",
+            "Element-wise Addition - Speedup: 42.77x\n",
+            "Dot Product - Non-vectorized time: 0.2193 seconds\n",
+            "Dot Product - Vectorized time: 0.0053 seconds\n",
+            "Dot Product - Speedup: 41.53x\n",
+            "Matrix Multiplication - Non-vectorized time: 1.6550 seconds\n",
+            "Matrix Multiplication - Vectorized time: 0.0117 seconds\n",
+            "Matrix Multiplication - Speedup: 141.25x\n"
+          ]
+        }
+      ],
       "source": [
         "import time\n",
         "\n",
@@ -668,22 +757,22 @@
         "# Print the results for matrix multiplication\n",
         "print(f\"Matrix Multiplication - Non-vectorized time: {non_vectorized_time_matrix_mult:.4f} seconds\")\n",
         "print(f\"Matrix Multiplication - Vectorized time: {vectorized_time_matrix_mult:.4f} seconds\")\n",
-        "print(f\"Matrix Multiplication - Speedup: {round(non_vectorized_time_matrix_mult / vectorized_time_matrix_mult, 2)}x\")"
+        "print(f\"Matrix Multiplication - Speedup: {round(non_vectorized_time_matrix_mult / vectorized_time_matrix_mult, 2)}x\")\n",
+        "\n"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
       "source": [
-        "### Comment on the the efficiency of the vectorized code compared to the unvectorized code. Be specific."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "Comment below:"
-      ]
+        "\n",
+        "Comment on the the efficiency of the vectorized code compared to the unvectorized code. Be specific.\n",
+        "\n",
+        "Comment below:\n",
+        "The vectorized code is so much faster than the non-vectorized code. Element wise addition is 42.77x faster. Dot product is 41.53x faster and Matrix Multiplication is 141.25x faster than the non vectorized time. Numpy saves time and memory consumption."
+      ],
+      "metadata": {
+        "id": "FHQR45zPn9AA"
+      }
     }
   ],
   "metadata": {
@@ -691,7 +780,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "base",
+      "display_name": "Python 3 (ipykernel)",
       "language": "python",
       "name": "python3"
     },
@@ -705,7 +794,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.4"
+      "version": "3.9.13"
     }
   },
   "nbformat": 4,
